# haskell-introduction

./: DataTypes.hs  ExempleProgram.hs  Functions.hs  List.hs  README.md  Tuples.hs
Fractals/: Fractals.cabal  Fractals.hs  LineGraphics.hs  _Fractals.hsplay
